--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ button.close-menu {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url("/img/2.jpg");
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url("https://clorostica.github.io/Cordillera/img/2.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
